Interactive custom collection creation UI initiated [;}

--- a/webApp/views/partials/sidebar.hbs
+++ b/webApp/views/partials/sidebar.hbs
@@ -30,11 +30,11 @@
       <span>Dashboard</span>
     </a>
 
-    <a href="/sales_analytics" class="page_link">
+    <a href="/analytics" class="page_link">
       <span>
-        <img src="assets/pagelinks/sales_analytics.svg" alt="sales_analytics">
+        <img src="assets/pagelinks/analytics.svg" alt="sales_analytics">
       </span>
-      <span>Sales Analytics</span>
+      <span>Analytics</span>
     </a>
 
     <a href="/customer_insights" class="page_link">
