--- a/webApp/public/css/main.css
+++ b/webApp/public/css/main.css
@@ -499,38 +499,6 @@ body {
     width: 95%;
   }
 }
-.modal-content .modal-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.modal-content .modal-header h2 {
-  font-size: 1.15rem;
-  font-weight: 700;
-  opacity: 0.8;
-}
-@media (max-width: 600px) {
-  .modal-content .modal-header h2 {
-    font-size: 0.95rem;
-  }
-}
-.modal-content .modal-header .close-btn {
-  background: none;
-  border: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-}
-.modal-content .modal-header .close-btn img {
-  width: 28px;
-  opacity: 0.75;
-  transition: 0.25s ease;
-}
-.modal-content .modal-header .close-btn:hover img {
-  opacity: 1;
-  scale: 1.25;
-}
 .modal-content .modal-body {
   margin-top: 1rem;
 }
@@ -742,5 +710,179 @@ body {
   background: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(2px);
   animation: backdropFade 0.3s ease;
+}
+
+.modal-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.modal-header h2 {
+  font-size: 1.15rem;
+  font-weight: 700;
+  opacity: 0.8;
+}
+@media (max-width: 600px) {
+  .modal-header h2 {
+    font-size: 0.95rem;
+  }
+}
+.modal-header .close-btn {
+  background: none;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  width: 28px;
+  padding: 0;
+  margin-top: -4px;
+}
+.modal-header .close-btn img {
+  width: 28px;
+  opacity: 0.75;
+  transition: 0.25s ease;
+}
+.modal-header .close-btn:hover {
+  scale: 1.25;
+}
+.modal-header .close-btn:hover img {
+  opacity: 1;
+}
+
+.custom-container {
+  background: rgb(248, 248, 248);
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  max-width: 560px;
+  width: 100%;
+}
+@media (max-width: 600px) {
+  .custom-container {
+    width: 95%;
+  }
+}
+.custom-container h2 {
+  opacity: 0.8;
+  font-size: 1rem;
+  font-weight: 700;
+}
+.custom-container label {
+  display: block;
+  font-weight: 600;
+  font-size: 14px;
+  margin: 1.5rem 0 10px 5px;
+  opacity: 0.75;
+}
+.custom-container .coll_name {
+  width: 100%;
+  padding: 8px;
+  margin-top: 1.5rem;
+  border: 1px solid #ebebeb;
+  border-radius: 4px;
+}
+.custom-container .field_sect {
+  margin-top: 1.75rem;
+  padding: 0.65rem 0.45rem;
+  border: 1.6px solid #ccc;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.custom-container .field_sect h3 {
+  font-size: 1rem;
+  opacity: 0.75;
+  font-weight: 600;
+  text-align: left;
+  width: 100%;
+}
+.custom-container .field_sect .field-group {
+  display: grid;
+  grid-template-columns: 1fr 1fr 20px;
+  gap: 8px;
+  width: 100%;
+  margin-top: 0.7rem;
+  height: 36px;
+  padding: 0 0.25rem;
+}
+.custom-container .field_sect .field-group input {
+  padding: 5px 8px;
+  border: 1px solid #ebebeb;
+  border-radius: 4px;
+  height: 100%;
+}
+.custom-container .field_sect .field-group select {
+  height: 100%;
+  padding: 5px 8px;
+  margin-bottom: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+.custom-container .field_sect .field-group .remove-btn {
+  background-color: #f72b4d;
+  color: white;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 700;
+  border-radius: 4px;
+  width: 26px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.25s ease;
+}
+.custom-container .field_sect .field-group .remove-btn:hover {
+  background-color: rgb(219, 14, 48);
+}
+.custom-container .field_sect #addFieldBtn {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: fit-content;
+  padding: 0.5rem 1rem;
+  margin-top: 2rem;
+  margin-bottom: -2rem;
+  border: none;
+  border-radius: 4px;
+  background-color: #007bff;
+  cursor: pointer;
+}
+.custom-container .field_sect #addFieldBtn img {
+  width: 24px;
+}
+.custom-container .field_sect #addFieldBtn span {
+  color: white;
+  font-size: 16px;
+}
+.custom-container #createCollectionBtn {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  margin-top: 3rem;
+  border: none;
+  border-radius: 4px;
+  background-color: #0dca8e;
+  color: white;
+  font-size: 16px;
+  font-weight: 600;
+  transition: 0.25s ease;
+  cursor: pointer;
+}
+.custom-container #createCollectionBtn:hover {
+  background-color: #4dd5b3;
+  color: rgb(29, 28, 28);
+}
+.custom-container #responseMessage {
+  margin-top: 15px;
+  text-align: center;
+  font-weight: bold;
 }
 /*# sourceMappingURL=main.css.map */
