--- a/webApp/public/sass/_files.scss
+++ b/webApp/public/sass/_files.scss
@@ -1,3 +1,5 @@
+//@use 'variables';
+
 /* Fade-in animation for dialog */
 @keyframes fadeIn {
   from {
@@ -32,44 +34,6 @@
 
   @media(max-width: 600px){
     width: 95%;
-  }
-
-  .modal-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    h2 {
-      font-size: 1.15rem;
-      font-weight: 700;
-      opacity: .8;
-
-      @media(max-width: 600px){
-        font-size: .95rem;
-      }
-    }
-
-    .close-btn {
-      background: none;
-      border: none;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      cursor: pointer;
-
-      img{
-        width: 28px;
-        opacity: .75;
-        transition: .25s ease;
-      }
-
-      &:hover{
-        img{
-          opacity: 1;
-          scale: 1.25;
-        }
-      }
-    }
   }
 
   .modal-body {
@@ -309,5 +273,49 @@
     background: rgba(0, 0, 0, 0.5); 
     backdrop-filter: blur(2px);
     animation: backdropFade 0.3s ease;
+  }
+}
+
+.modal-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+
+  h2 {
+    font-size: 1.15rem;
+    font-weight: 700;
+    opacity: .8;
+
+    @media(max-width: 600px){
+      font-size: .95rem;
+    }
+  }
+
+  .close-btn {
+    background: none;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    width: 28px;
+    padding: 0;
+    margin-top: -4px;
+
+    img{
+      width: 28px;
+      opacity: .75;
+      transition: .25s ease;
+    }
+
+    &:hover{
+      scale: 1.25;
+
+      img{
+        opacity: 1;
+      }
+    }
   }
 }
