--- a/webApp/public/css/main.css
+++ b/webApp/public/css/main.css
@@ -752,6 +752,26 @@ body {
   opacity: 1;
 }
 
+/* Fade-in animation for dialog */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: scale(0.9);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+/* Fade-in animation for backdrop */
+@keyframes backdropFade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 .custom-container {
   background: rgb(248, 248, 248);
   padding: 20px;
@@ -759,6 +779,8 @@ body {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   max-width: 560px;
   width: 100%;
+  animation: fadeIn 0.3s ease;
+  margin: auto;
 }
 @media (max-width: 600px) {
   .custom-container {
@@ -800,6 +822,29 @@ body {
   font-weight: 600;
   text-align: left;
   width: 100%;
+}
+.custom-container .field_sect #fields_explained {
+  display: none; /* Hidden by default */
+  text-align: center;
+  color: #666;
+  font-size: 14px;
+  padding: 10px;
+  border: 1px dashed #b9b8b8;
+  background-color: #f9f9f9;
+  border-radius: 6px;
+  width: 100%;
+  margin-top: 1rem;
+}
+.custom-container .field_sect #fields_explained p {
+  margin: 0;
+}
+.custom-container .field_sect #fields_explained ul {
+  margin: 10px 0 0 0;
+  padding: 0;
+  list-style: none;
+}
+.custom-container .field_sect #fields_explained li {
+  margin: 5px 0;
 }
 .custom-container .field_sect .field-group {
   display: grid;
@@ -847,20 +892,53 @@ body {
   align-items: center;
   justify-content: center;
   width: fit-content;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 0.65rem;
   margin-top: 2rem;
   margin-bottom: -2rem;
   border: none;
   border-radius: 4px;
-  background-color: #007bff;
+  background-color: #ebf2f7;
+  border: 2px solid gray;
   cursor: pointer;
+  transition: 0.25s ease;
 }
 .custom-container .field_sect #addFieldBtn img {
   width: 24px;
+  opacity: 0.75;
+  transition: 0.25s ease;
+}
+@media (max-width: 600px) {
+  .custom-container .field_sect #addFieldBtn img {
+    width: 22px;
+  }
 }
 .custom-container .field_sect #addFieldBtn span {
-  color: white;
+  color: rgb(31, 30, 30);
+  transition: 0.25s ease;
   font-size: 16px;
+  font-weight: 600;
+  margin-left: 0.8rem;
+  margin-bottom: -2px;
+}
+@media (max-width: 600px) {
+  .custom-container .field_sect #addFieldBtn span {
+    font-size: 14px;
+  }
+}
+@media (max-width: 330px) {
+  .custom-container .field_sect #addFieldBtn span {
+    font-size: 12px;
+  }
+}
+.custom-container .field_sect #addFieldBtn:hover {
+  background-color: #cbd3da;
+  border: 2px solid #190c3b;
+}
+.custom-container .field_sect #addFieldBtn:hover img {
+  opacity: 1;
+}
+.custom-container .field_sect #addFieldBtn:hover span {
+  color: black;
 }
 .custom-container #createCollectionBtn {
   display: block;
@@ -869,7 +947,7 @@ body {
   margin-top: 3rem;
   border: none;
   border-radius: 4px;
-  background-color: #0dca8e;
+  background-color: #12c47a;
   color: white;
   font-size: 16px;
   font-weight: 600;
@@ -877,12 +955,17 @@ body {
   cursor: pointer;
 }
 .custom-container #createCollectionBtn:hover {
-  background-color: #4dd5b3;
+  background-color: #0dca8e;
   color: rgb(29, 28, 28);
 }
 .custom-container #responseMessage {
   margin-top: 15px;
   text-align: center;
   font-weight: bold;
+}
+.custom-container::backdrop {
+  background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(2px);
+  animation: backdropFade 0.3s ease;
 }
 /*# sourceMappingURL=main.css.map */
