--- a/webApp/views/analytics.hbs
+++ b/webApp/views/analytics.hbs
@@ -6,8 +6,71 @@
 
     <div class="dynamic_body">
       {{!-- Your sections and divs go here --}}
-      <button id="open-customize-btn" style="border: 2px solid rgb(27, 245, 179); color: rgb(6, 59, 59); padding: .5rem 10px; border-radius: 10px;">Create collection</button>
+      <div class = "collection_widget rounded-md">
+        <div class="collections_header">
+          <h2>Collections</h2>
 
+          <button id="open-customize-btn">
+            <img src="assets/icons/create-collection.svg" alt="create-collection">
+          </button>
+        </div>
+
+        <div class="default_colls">
+          <div class="def_coll coll-1">
+            <span>
+              <img src="assets/icons/single-collection.svg" alt="single-collection" />
+            </span>
+            <span>
+              Customers
+            </span>                 
+          </div>
+
+          <div class="def_coll coll-2">
+            <span>
+              <img src="assets/icons/single-collection.svg" alt="single-collection" />
+            </span>
+            <span>
+              Inventory
+            </span> 
+          </div>
+
+          <div class="def_coll coll-3">
+            <span>
+              <img src="assets/icons/single-collection.svg" alt="single-collection" />
+            </span>
+            <span>
+              Orders
+            </span> 
+          </div>
+
+          <div class="def_coll coll-4">
+            <span>
+              <img src="assets/icons/single-collection.svg" alt="single-collection" />
+            </span>
+            <span>
+              Sales
+            </span> 
+          </div>
+
+          <div class="def_coll coll-5">
+            <span>
+              <img src="assets/icons/single-collection.svg" alt="single-collection" />
+            </span>
+            <span>
+              Products
+            </span>       
+          </div>
+
+          <div class="def_coll coll-6">
+            <span>
+              <img src="assets/icons/single-collection.svg" alt="single-collection" />
+            </span>
+            <span>
+              Employees
+            </span> 
+          </div>
+        </div>
+      </div>
       <dialog class="custom-container">
         <div class="modal-header ">
           <h2>Create a Custom Collection</h2>
