--- a/webApp/views/dashboard.hbs
+++ b/webApp/views/dashboard.hbs
@@ -65,11 +65,11 @@
           </div>
 
           <div class="flex flex-col md:flex-row gap-4 mt-4 lg:flex-row">
-            {{!-- <div class=" w-full md:w-7/12 h-64">
+            <div class=" w-full md:w-7/12 h-64">
               <img src="assets/barchart.png" class="h-64 w-full" alt="">
-            </div> --}}
+            </div> 
 
-            {{!-- <div class="flex flex-col gap-3 w-full md:w-5/12 lg:w-5/12 h-64">
+            <div class="flex flex-col gap-3 w-full md:w-5/12 lg:w-5/12 h-64">
               <div class="flex flex-row h-1/2 gap-3">
                 <div class="w-7/12 flex flex-col bg-white">
                   <img src="assets/icons/group.png" alt="reset" class="w-12 pl-4">
@@ -83,36 +83,8 @@
               <div class="w-full h-1/2">
                 <img src="assets/linechart.png" alt="reset" class="w-full h-full pl-4 pt-2 pr-4 bg-purple-00">
               </div>
-            </div> --}}
-            <div class = "border-2 border-black rounded-md w-full h-full">
-              <h2>Collections</h2>
-
-              <div class="default_colls">
-                <div class="def_coll coll-1">
-                  Customers
-                </div>
-
-                <div class="def_coll coll-2">
-                  Inventory
-                </div>
-
-                <div class="def_coll coll-3">
-                  Orders
-                </div>
-
-                <div class="def_coll coll-4">
-                  Sales
-                </div>
-
-                <div class="def_coll coll-5">
-                  Products
-                </div>
-
-                <div class="def_coll coll-6">
-                  Employees
-                </div>
-              </div>
-            </div>
+            </div> 
+            
           </div>
 
           <div class="flex flex-col md:flex-row lg:flex-row gap-4 mt-4">
