--- a/webApp/views/partials/sidebar.hbs
+++ b/webApp/views/partials/sidebar.hbs
@@ -72,6 +72,13 @@
       <span>ESG Metrics</span>
     </a>
 
+    <a href="/collections" class="page_link">
+      <span>
+        <img src="assets/pagelinks/collections-folder.svg" alt="collections-folder">
+      </span>
+      <span>Collections</span>
+    </a>
+
     <a href="/files" class="page_link">
       <span>
         <img src="assets/pagelinks/files.svg" alt="files">
