--- a/webApp/public/css/main.css
+++ b/webApp/public/css/main.css
@@ -55,7 +55,7 @@ body {
   flex-direction: column;
   flex-wrap: nowrap;
   width: 100%;
-  padding: 1.5rem 0;
+  padding: 1rem 0 2rem 0;
 }
 .skeleton .sidebar .logo .quantiq {
   display: flex;
@@ -146,7 +146,6 @@ body {
   align-items: center;
   flex-direction: column;
   flex-wrap: nowrap;
-  padding: 1.8rem 0;
   width: 100%;
   height: 100%;
 }
@@ -198,7 +197,7 @@ body {
 .skeleton .sidebar .pages .page_link:hover > span:nth-child(2) {
   color: rgb(223, 227, 227);
 }
-.skeleton .sidebar .pages > a:nth-child(9) {
+.skeleton .sidebar .pages > a:nth-child(10) {
   margin-top: auto;
 }
 .skeleton .parent_container {
@@ -988,8 +987,7 @@ body {
 .collection_widget .collections_header h2 {
   font-size: 1.35rem;
   font-weight: 600;
-  color: rgb(100, 98, 98);
-  opacity: 0.75;
+  color: rgb(101, 194, 248);
   text-align: left;
 }
 .collection_widget .collections_header button {
@@ -1048,5 +1046,214 @@ body {
 }
 .collection_widget .default_colls .def_coll:hover span:nth-child(2) {
   opacity: 0.9;
+}
+
+.data_container {
+  width: 100%;
+  margin-top: 1.25rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+}
+@media (max-width: 780px) {
+  .data_container {
+    grid-template-columns: 1fr;
+  }
+}
+.data_container > div {
+  background-color: white;
+  padding: 1rem 0.8rem;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px 2px rgb(215, 214, 214);
+}
+.data_container .visualize_container h3 {
+  font-size: 1.25rem;
+  font-weight: 600;
+  text-align: left;
+  color: rgb(58, 57, 57);
+}
+.data_container .visualize_container p {
+  font-size: 14px;
+  text-align: left;
+  color: rgb(85, 83, 83);
+  margin-top: 4px;
+}
+@media (max-width: 330px) {
+  .data_container .visualize_container p {
+    font-size: 12px;
+  }
+}
+.data_container .visualize_container .charts_container {
+  margin-top: 1rem;
+  border: 1.6px solid hsl(0, 0%, 94%);
+  border-radius: 10px;
+}
+.data_container .visualize_container .charts_container .switch_btns {
+  width: 100%;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  margin-top: 0.5rem;
+}
+.data_container .visualize_container .charts_container .switch_btns > div {
+  padding: 0.25rem 0.65rem;
+  font-size: 14px;
+  font-weight: 600;
+  color: rgb(108, 174, 245);
+  transition: 0.25s ease;
+}
+.data_container .visualize_container .charts_container .switch_btns > div:hover {
+  cursor: pointer;
+  color: rgb(48, 140, 238);
+}
+.data_container .visualize_container .charts_container .switch_btns .current_chart {
+  border-bottom: 3px solid rgb(153, 99, 245);
+  color: rgb(48, 140, 238);
+}
+.data_container .visualize_container .charts_container .chart_switch {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  width: 100%;
+  margin-top: 0.75rem;
+}
+.data_container .visualize_container .charts_container .chart_switch div {
+  overflow: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+.data_container .visualize_container .charts_container .chart_switch div img {
+  width: 100%;
+}
+.data_container .collections_explained {
+  display: flex;
+  justify-content: start;
+  align-items: start;
+  flex-direction: column;
+  flex-wrap: nowrap;
+}
+.data_container .collections_explained h3 {
+  font-size: 1.25rem;
+  font-weight: 600;
+  color: rgb(58, 57, 57);
+  margin-bottom: 0.5rem;
+  text-align: left;
+}
+.data_container .collections_explained p {
+  font-size: 14px;
+  color: rgb(85, 83, 83);
+  text-align: left;
+  line-height: 1.4;
+}
+@media (max-width: 330px) {
+  .data_container .collections_explained p {
+    font-size: 12px;
+  }
+}
+.data_container .collections_explained .default_collections {
+  margin-top: 1rem;
+  border: 1.6px dashed hsl(0, 0%, 89%);
+  border-radius: 10px;
+  padding: 0.7rem 0.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  transition: 0.25s ease;
+}
+.data_container .collections_explained .default_collections:hover {
+  border: 1.6px dashed rgb(108, 174, 245);
+}
+.data_container .collections_explained .default_collections .about_head {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.data_container .collections_explained .default_collections .about_head span:first-child {
+  font-size: 14px;
+  color: rgb(108, 174, 245);
+  font-weight: 600;
+}
+.data_container .collections_explained .default_collections .about_head span:last-child img {
+  width: 22px;
+  cursor: pointer;
+}
+.data_container .collections_explained .default_collections .about_body {
+  margin-top: 0.75rem;
+  font-size: 14px;
+  color: rgb(90, 90, 90);
+  text-align: left;
+  line-height: 1.8;
+  background-color: hsl(0, 0%, 98%);
+  padding: 1rem;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+}
+.data_container .collections_explained .default_collections .about_body p {
+  font-weight: 500;
+  margin-bottom: 0.5rem;
+  color: rgb(80, 80, 80);
+}
+.data_container .collections_explained .default_collections .about_body ul {
+  list-style: disc;
+  padding-left: 1.5rem;
+}
+.data_container .collections_explained .default_collections .about_body ul li {
+  margin-bottom: 0.25rem;
+  color: rgb(70, 70, 70);
+}
+.data_container .collections_explained .default_collections .about_body ul li:last-child {
+  margin-bottom: 0;
+}
+@media (max-width: 330px) {
+  .data_container .collections_explained .default_collections .about_body {
+    font-size: 12px;
+    padding: 0.75rem;
+  }
+}
+.data_container .proceed_box {
+  margin-top: auto;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+.data_container .proceed_box a {
+  margin: 0 auto;
+  padding: 0.5rem;
+  width: 100%;
+  background-color: rgb(36, 36, 36);
+  border: 1.6px solid rgb(36, 36, 36);
+  color: white;
+  border-radius: 10px;
+  font-size: 1rem;
+  font-weight: 600;
+  transition: 0.25s ease;
+  text-align: center;
+}
+.data_container .proceed_box a:hover {
+  color: rgb(36, 36, 36);
+  background-color: rgb(214, 211, 211);
+}
+@media (max-width: 600px) {
+  .data_container .proceed_box a {
+    font-size: 14px;
+    padding: 0.4rem;
+  }
+}
+@media (max-width: 330px) {
+  .data_container .proceed_box a {
+    font-size: 12px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
