--- a/webApp/public/sass/_layout.scss
+++ b/webApp/public/sass/_layout.scss
@@ -55,7 +55,7 @@ body{
     .logo{
       @include flexbox(start, center, column);
       width: 100%;
-      padding: 1.5rem 0;
+      padding: 1rem 0 2rem 0;
 
       .quantiq{
         @include flexbox(start, center, row);
@@ -127,29 +127,10 @@ body{
           }
         }
       }
-
-      // .toggle_sidebar{
-      //   width: 32px;
-
-      //   img{
-      //     width: 100%;
-      //   }
-
-      //   img:nth-child(1){
-      //     @media(min-width: 1025px){
-      //       display: none;
-      //     }
-      //   }
-
-      //   .hidden{
-      //     display: none;
-      //   }
-      // }
     }
 
     .pages{
       @include flexbox(start, center, column);
-      padding: 1.8rem 0;
       width: 100%;
       height: 100%;
 
@@ -197,7 +178,7 @@ body{
         }
       }
 
-      & > a:nth-child(9){
+      & > a:nth-child(10){
         margin-top: auto;
       }
     }
