--- a/webApp/public/sass/_widgets.scss
+++ b/webApp/public/sass/_widgets.scss
@@ -27,8 +27,9 @@
     h2{
       font-size: 1.35rem;
       font-weight:  600;
-      color: rgb(101, 194, 248);
+      color: rgb(73, 11, 189);
       text-align: left;
+      opacity: .7;
     }
 
     button{
@@ -57,13 +58,13 @@
 
     .def_coll{
       border-radius: 4px;
-      background-color: rgb(239, 242, 243);
-      padding: 1.2rem 1.15rem;
+      background-color: rgb(246, 250, 250);
+      padding: .8rem 1rem;
       @include flexbox(center, center, column);
-      box-shadow: 0 4px 8px 4px rgb(228, 227, 227);
+      box-shadow: 2px 4px 8px 4px rgb(228, 227, 227);
 
       span:nth-child(1){
-        width: 48px;
+        width: 42px;
 
         img{
           width: 100%;
@@ -74,9 +75,9 @@
 
       span:nth-child(2){
         margin-top: .65rem;
-        font-size: 14px; 
+        font-size: 12px; 
         font-weight: 600;
-        opacity: .7;
+        opacity: .55;
         transition: .25s ease;
 
         @media(max-width: 600px){
@@ -300,6 +301,53 @@
       }
       @media(max-width: 330px){
         font-size: 12px;
+      }
+    }
+  }
+}
+
+.collection_details{
+  @include flexbox(start, start, column);
+  margin-top: 1rem;
+  padding: .5rem;
+  width: 100%;
+  border-radius: 10px;
+  border: 1.6px solid #ccc;
+  min-height: 60vh;
+  background-color: rgb(255, 255, 255);
+
+  .detail_head{
+    @include flexbox(space-between, center, row);
+    width: 100%;
+    
+    span{
+      font-size: 1.4rem;
+      font-weight: 600;
+      color: rgb(61, 51, 78);
+      opacity: .7;
+    }
+    button{
+      padding: .35rem .65rem;
+      border: 1.6px solid rgb(27, 27, 27);
+      border-radius: 10px;
+      font-weight: 600;
+      color:rgb(36, 36, 36);
+      font-size: 14px;
+    }
+  }
+
+  .detail_body{
+    margin-top: 1rem;
+    
+    .collection_schema{
+
+    }
+    .data_processing{
+      .processing_opts{
+
+      }
+      .processing_method{
+
       }
     }
   }
