--- a/webApp/public/css/main.css
+++ b/webApp/public/css/main.css
@@ -987,8 +987,9 @@ body {
 .collection_widget .collections_header h2 {
   font-size: 1.35rem;
   font-weight: 600;
-  color: rgb(101, 194, 248);
+  color: rgb(73, 11, 189);
   text-align: left;
+  opacity: 0.7;
 }
 .collection_widget .collections_header button {
   width: 32px;
@@ -1009,17 +1010,17 @@ body {
 }
 .collection_widget .default_colls .def_coll {
   border-radius: 4px;
-  background-color: rgb(239, 242, 243);
-  padding: 1.2rem 1.15rem;
+  background-color: rgb(246, 250, 250);
+  padding: 0.8rem 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   flex-wrap: nowrap;
-  box-shadow: 0 4px 8px 4px rgb(228, 227, 227);
+  box-shadow: 2px 4px 8px 4px rgb(228, 227, 227);
 }
 .collection_widget .default_colls .def_coll span:nth-child(1) {
-  width: 48px;
+  width: 42px;
 }
 .collection_widget .default_colls .def_coll span:nth-child(1) img {
   width: 100%;
@@ -1028,9 +1029,9 @@ body {
 }
 .collection_widget .default_colls .def_coll span:nth-child(2) {
   margin-top: 0.65rem;
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 600;
-  opacity: 0.7;
+  opacity: 0.55;
   transition: 0.25s ease;
 }
 @media (max-width: 600px) {
@@ -1255,5 +1256,49 @@ body {
   .data_container .proceed_box a {
     font-size: 12px;
   }
+}
+
+.collection_details {
+  display: flex;
+  justify-content: start;
+  align-items: start;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  margin-top: 1rem;
+  padding: 0.5rem;
+  width: 100%;
+  border-radius: 10px;
+  border: 1.6px solid #ccc;
+  min-height: 60vh;
+  background-color: rgb(255, 255, 255);
+}
+.collection_details .detail_head {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  width: 100%;
+}
+.collection_details .detail_head span {
+  font-size: 1.4rem;
+  font-weight: 600;
+  color: rgb(61, 51, 78);
+  opacity: 0.7;
+}
+.collection_details .detail_head button {
+  padding: 0.35rem 0.65rem;
+  border: 1.6px solid rgb(27, 27, 27);
+  border-radius: 10px;
+  font-weight: 600;
+  color: rgb(36, 36, 36);
+  font-size: 14px;
+}
+.collection_details .detail_body {
+  margin-top: 1rem;
+  width: 100%;
+}
+.collection_details .detail_body .hidden {
+  display: none;
 }
 /*# sourceMappingURL=main.css.map */
