--- a/webApp/views/dashboard.hbs
+++ b/webApp/views/dashboard.hbs
@@ -108,7 +108,7 @@
               </div>
 
               <div class="proceed_box">
-                <a href="/collections" class="start_process">
+                <a href="/analytics" class="start_process">
                  Proceed to collections
                 </a>
               </div>
